--- a/spring-rest-demo/.project
+++ b/spring-rest-demo/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>spring-rest-demo</name>
+	<name>spring-rest-helloWorld</name>
 	<comment></comment>
 	<projects>
 	</projects>
